--- a/package.json
+++ b/package.json
@@ -1,22 +1,27 @@
 {
-  "name": "druid-query",
-  "description": "Simple querying for Druid",
-  "keywords": [
+  "name":         "druid-query",
+  "description":  "Simple querying for Druid",
+  "keywords":     [
     "druid",
     "query",
     "http"
   ],
-  "version": "0.0.1",
-  "main": "lib/index.js",
+  "version":      "0.0.1",
+  "main":         "lib/index.js",
+  "repository":   {
+    "type": "git",
+    "url":  "https://github.com/7eggs/node-druid-query.git"
+  },
+  "bugs":         {
+    "url": "https://github.com/7eggs/node-druid-query/issues"
+  },
   "dependencies": {
     "custom-error-generator": "^7.0.0",
-    "lodash": "^2.4.1",
-    "moment": "^2.7.0",
-    "node-zookeeper-client": "^0.2.1",
-    "request": "^2.37.0"
+    "lodash":                 "^2.4.1",
+    "moment":                 "^2.7.0",
+    "node-zookeeper-client":  "^0.2.1",
+    "request":                "^2.37.0"
   },
-  "author": "Alexander Makarenko <estliberitas@gmail.com>",
-  "devDependencies": {
-    "jsdoc": "^3.3.0-alpha9"
-  }
+  "author":       "Alexander Makarenko <estliberitas@gmail.com>",
+  "license":      "MIT"
 }
