--- a/package.json
+++ b/package.json
@@ -1,27 +1,34 @@
 {
-  "name":         "druid-query",
-  "description":  "Simple querying for Druid",
-  "keywords":     [
+  "name":            "druid-query",
+  "description":     "Simple querying for Druid",
+  "keywords":        [
     "druid",
     "query",
     "http"
   ],
-  "version":      "0.0.2",
-  "main":         "lib/index.js",
-  "repository":   {
+  "version":         "0.0.2",
+  "main":            "lib/index.js",
+  "repository":      {
     "type": "git",
     "url":  "https://github.com/7eggs/node-druid-query.git"
   },
-  "bugs":         {
+  "bugs":            {
     "url": "https://github.com/7eggs/node-druid-query/issues"
   },
-  "dependencies": {
+  "dependencies":    {
     "custom-error-generator": "^7.0.0",
     "lodash":                 "^2.4.1",
     "moment":                 "^2.7.0",
     "node-zookeeper-client":  "^0.2.1",
     "request":                "^2.37.0"
   },
-  "author":       "Alexander Makarenko <estliberitas@gmail.com>",
-  "license":      "MIT"
+  "devDependencies": {
+    "expect.js": "^0.3.1",
+    "mocha":     "^1.20.1"
+  },
+  "scripts":         {
+    "test": "./node_modules/.bin/mocha --recursive spec/"
+  },
+  "author":          "Alexander Makarenko <estliberitas@gmail.com>",
+  "license":         "MIT"
 }
