--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies":    {
     "custom-error-generator": "^7.0.0",
+    "debug":                  "^1.0.4",
     "lodash":                 "^2.4.1",
     "node-zookeeper-client":  "^0.2.1",
     "request":                "^2.37.0"
